Added API to the information about the deployment environment
