# restapi/operations/get_deploy_env_responses.go
@@ -1,0 +1,58 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package operations
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"net/http"
+
+	"github.com/go-openapi/runtime"
+
+	models "github.com/baez90/go-icndb/models"
+)
+
+// GetDeployEnvOKCode is the HTTP code returned for type GetDeployEnvOK
+const GetDeployEnvOKCode int = 200
+
+/*GetDeployEnvOK OK
+
+swagger:response getDeployEnvOK
+*/
+type GetDeployEnvOK struct {
+
+	/*
+	  In: Body
+	*/
+	Payload *models.DeployEnvResponse `json:"body,omitempty"`
+}
+
+// NewGetDeployEnvOK creates GetDeployEnvOK with default headers values
+func NewGetDeployEnvOK() *GetDeployEnvOK {
+
+	return &GetDeployEnvOK{}
+}
+
+// WithPayload adds the payload to the get deploy env o k response
+func (o *GetDeployEnvOK) WithPayload(payload *models.DeployEnvResponse) *GetDeployEnvOK {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the get deploy env o k response
+func (o *GetDeployEnvOK) SetPayload(payload *models.DeployEnvResponse) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *GetDeployEnvOK) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(200)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
